Add file only (no content) for booking, review, komplain

--- a/I3PFrontEnd/index.html
+++ b/I3PFrontEnd/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="loginandregister">
                 <button type="button" class="btn btn-large btn-orange" data-toggle="modal" data-target="#loginModal">Login</button>
-                <a href="#"><button type="button" class="btn btn-large btn-orange">Register</button></a>
+                <a class="btn btn-large btn-orange" href="register.html">Register</a>
             </div>
               <!-- Modal -->
             <div class="modal fade" id="loginModal" role="dialog">
