--- a/I3PFrontEnd/komplainuser.html
+++ b/I3PFrontEnd/komplainuser.html
@@ -20,7 +20,7 @@
                     <li  class="active"><a class="textwhite" href="komplainuser.html">Komplain</a></li>
                     <li class="dropdown"><a class="dropdown-toggle textwhite" data-toggle="dropdown" href="#">Username <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Pemesanan Saya</a></li>
+                            <li><a href="pemesanansaya.html">Pemesanan Saya</a></li>
                             <li><a href="#">Komplain Saya</a></li>
                             <li><a href="#">Log Out</a></li>
                         </ul>
@@ -31,13 +31,15 @@
         <div class="container">
             <div class="panel panel-default panel-reg">
                 <div class="panel-body">
-                    <div class="panelhead">Booking</div>
+                    <div class="panelhead">Komplain terhadap ZEN</div>
+                    <div class="descques">Kurang puas dengan fasilitas di ZEN? Beritahu kami</div>
                     <form role="form">
-                        <div style="overflow:hidden;">
-                            <div class="form-group">
-                                <label for="datetimebooking">Tanggal dan Waktu Booking</label>
-                                <input type="date" name="datetimebooking">
-                            </div>
+                        <div class="form-group">
+                            <textarea type="text" class="form-control descrvw" placeholder="Apa saja yang membuat Anda kurang puas dengan fasilitas di ZEN? Berikan saran terbaik Anda."></textarea>
+                        </div>
+                        <div class="form-group rvwbtn">
+                            <a href="booking.html" class="btn btnbatal" role="button"> BATAL</a>
+                            <button type="submit" class="btn btnkirim"> KIRIM</button>
                         </div>
                     </form>
                 </div>
