--- a/I3PFrontEnd/reviewuser.html
+++ b/I3PFrontEnd/reviewuser.html
@@ -20,7 +20,7 @@
                     <li><a class="textwhite" href="komplainuser.html">Komplain</a></li>
                     <li class="dropdown"><a class="dropdown-toggle textwhite" data-toggle="dropdown" href="#">Username <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Pemesanan Saya</a></li>
+                            <li><a href="pemesanansaya.html">Pemesanan Saya</a></li>
                             <li><a href="#">Komplain Saya</a></li>
                             <li><a href="#">Log Out</a></li>
                         </ul>
@@ -31,13 +31,29 @@
         <div class="container">
             <div class="panel panel-default panel-reg">
                 <div class="panel-body">
-                    <div class="panelhead">Booking</div>
+                    <div class="panelhead">Ulasan oleh UserName</div> <!-- username harus diganti dengan user saat ini-->
+                    <div class="descques">Bagaimana pendapat anda tentang pelayanan kami?</div>
                     <form role="form">
-                        <div style="overflow:hidden;">
-                            <div class="form-group">
-                                <label for="datetimebooking">Tanggal dan Waktu Booking</label>
-                                <input type="date" name="datetimebooking">
-                            </div>
+                        <div class="form-group">
+                            <textarea type="text" class="form-control descrvw" placeholder="Deskripsikan seluruh pendapat anda tentang pelayanan yang diberikan oleh therapist kami"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <span class="loverating">
+                                  <input id="rating5" type="radio" name="rating" value="5">
+                                  <label for="rating5">5</label>
+                                  <input id="rating4" type="radio" name="rating" value="4">
+                                  <label for="rating4">4</label>
+                                  <input id="rating3" type="radio" name="rating" value="3">
+                                  <label for="rating3">3</label>
+                                  <input id="rating2" type="radio" name="rating" value="2">
+                                  <label for="rating2">2</label>
+                                  <input id="rating1" type="radio" name="rating" value="1">
+                                  <label for="rating1">1</label>
+                            </span>
+                        </div>
+                        <div class="form-group rvwbtn">
+                            <a href="booking.html" class="btn btnbatal" role="button"> BATAL</a>
+                            <button type="submit" class="btn btnkirim"> KIRIM</button>
                         </div>
                     </form>
                 </div>
