--- a/I3PFrontEnd/pemesanansaya.html
+++ b/I3PFrontEnd/pemesanansaya.html
@@ -17,11 +17,11 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a class="textwhite" href="booking.html">Booking</a></li>
                     <li><a class="textwhite" href="reviewuser.html">Review</a></li>
-                    <li  class="active"><a class="textwhite" href="komplainuser.html">Komplain</a></li>
+                    <li ><a class="textwhite" href="komplainuser.html">Komplain</a></li>
                     <li class="dropdown"><a class="dropdown-toggle textwhite" data-toggle="dropdown" href="#">Username <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="pemesanansaya.html">Pemesanan Saya</a></li>
-                            <li><a href="#">Komplain Saya</a></li>
+                            <li><a href="komplainsaya.html">Komplain Saya</a></li>
                             <li><a href="#">Log Out</a></li>
                         </ul>
                     </li>
@@ -29,7 +29,7 @@
             </div>
         </nav> 
         <div class="container">
-            <div class="panelhead">Pemesanan Saya</div>
+            <div class="headcenter">Pemesanan Saya</div>
             <!--harusnya generate panel di sini, tergantung backendnya-->
             <!-- tampilan untuk minta konfirmasi-->
             <div class="panel panel-default panel-reg">
