--- a/I3PFrontEnd/uploadcv.html
+++ b/I3PFrontEnd/uploadcv.html
@@ -15,8 +15,8 @@
                     <a class="navbar-brand" href="index.html"><img class="logonav" src="img/logozen.png"></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="textwhite" href="uploadcv.html">Upload CV</a></li>
-                    <li class="active"><a class="textwhite" href="pengumuman.html">Pengumuman</a></li>
+                    <li class="active"><a class="textwhite" href="uploadcv.html">Upload CV</a></li>
+                    <li><a class="textwhite" href="pengumuman.html">Pengumuman</a></li>
                     <li><a class="textwhite" href="#">Log Out</a></li>
                 </ul>
             </div>
@@ -24,14 +24,13 @@
         <div class="container">
             <div class="panel panel-default panel-reg">
                 <div class="panel-body">
-                    <div class="panelhead">Pengumuman</div>
-                    <div class="pengumumanhead">
-                        Berikut adalah nama-nama karyawan yang diterima di ZEN. Silahkan cek email kalian masing-masing untuk pemberitahuan lebih lanjut.
-                    </div>                   
-                    <ol>
-                         <!-- harusnya di sini diambil daftar nama karyawan yang lulus + jabatan-->
-                        <li>Nama orang (Jabatan)</li> <!-- ambil dari basis datanya-->
-                    </ol>
+                    <div class="panelhead">Upload CV</div>
+                    <div class="uploadcv">Upload CV Anda di sini dalam format .pdf atau .doc atau .docx</div>
+                    <form role="form" action="#">
+                        <div class="form-group">
+                            <input type="file" name="cv" accept=".pdf, .doc, .docx">
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
