--- a/I3PFrontEnd/booking.html
+++ b/I3PFrontEnd/booking.html
@@ -57,8 +57,35 @@
 									language: 'en'
 								  });
 								</script>
+								
 							</div>
+							<br>
+							<label for="jenisterapi">Jenis Terapi</label>
+							<br>
+							<form action="">
+								<select name="jenisterapi">
+									<option value="1">1</option>
+									<option value="2">2</option>
+									<option value="3">3</option>
+									<option value="4">4</option>
+								</select>
+								<br><br>
+							</form>
 							
+							<label for="jumlahorang">Jumlah Orang</label>
+							<form action="">
+								<select name="jumlahorang">
+									<option value="1">1</option>
+									<option value="2">2</option>
+									<option value="3">3</option>
+									<option value="4">4</option>
+								</select>
+								<br><br>
+							</form>
+							<div class="col-sm-8"></div>
+							<div class="col-sm-3">
+								<a href="" role="button" class="btn btnbukti">Simpan</a>
+							</div>
                         </div>
                     </form>
                 </div>
