--- a/I3PFrontEnd/komplainuser.html
+++ b/I3PFrontEnd/komplainuser.html
@@ -21,7 +21,7 @@
                     <li class="dropdown"><a class="dropdown-toggle textwhite" data-toggle="dropdown" href="#">Username <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="pemesanansaya.html">Pemesanan Saya</a></li>
-                            <li><a href="komplainsaya.html"">Komplain Saya</a></li>
+                            <li><a href="komplainsaya.html">Komplain Saya</a></li>
                             <li><a href="#">Log Out</a></li>
                         </ul>
                     </li>
