edit minor refer link logo

--- a/I3PFrontEnd/booking.html
+++ b/I3PFrontEnd/booking.html
@@ -63,10 +63,10 @@
 							<div class="form-group">
 								<label for="jenisterapi">Jenis Terapi</label>
 								<select name="jenisterapi" class="form-control">
-									<option value="1">1</option>
-									<option value="2">2</option>
-									<option value="3">3</option>
-									<option value="4">4</option>
+									<option value="Foot Spa">Foot Spa</option>
+									<option value="Back Spa">Back Spa</option>
+									<option value="Foot Refelxy">Foot Reflexy</option>
+									<option value="Back Reflexy">Bakc Reflexy</option>
 								</select>
 							</div>
 							
