--- a/I3PFrontEnd/presensi.html
+++ b/I3PFrontEnd/presensi.html
@@ -28,31 +28,14 @@
                     <div class="presensihead">
                         Kejujuran adalah kunci utama dalam segala kegiatan.<br>Manajer pasti mengetahui apakah kalian benar-benar hadir atau tidak.
                     </div>                   
-                    <form role="form">
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-sm-2">
-                                    <label>
-                                        <input type="radio" name="hadir" value="hadir"/>
-                                        <img class="hadir" src="img/konfirmyes.png">
-                                    </label>
-                                </div>
-                                <div class="col-sm-10">
-                                    Hadir
-                                </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-sm-2">
-                                    <label for="alasantidakhadir"> <input type="radio" name="tidakhadir" value="tidak hadir"/> <img class="hadir" src="img/tidakhadir.png"></label>
-                                </div>
-                                <div class="col-sm-10">
-                                    <input class="form-control tidakhadir" id="alasantidakhadir" type="text" placeholder="Tidak, karena...">
-                                </div>
-                            </div>
-                        </div>
-                        <button type="submit" class="btn btnsimpan">Simpan  </button>
-                    </form>
+                  	<div class="row">
+                  		<div class="col-sm-9">Jumat, 15 April 2016 15:00 WIB</div>
+                  		<div class="col-sm-3">Hadir</div>
+                  	</div>
+                  	<div class="row">
+                  		<div class="col-sm-9">Kamis, 14 April 2016</div>
+                  		<div class="col-sm-3">Tidak Hadir</div>
+                  	</div>
                 </div>
             </div>
         </div>
