Change catatan, add komplain staff page

--- a/I3PFrontEnd/tambahcatatan.html
+++ b/I3PFrontEnd/tambahcatatan.html
@@ -15,7 +15,7 @@
                     <a class="navbar-brand" href="index.html"><img class="logonav" src="img/logozen.png"></a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a class="textwhite" href="#">Komplain</a></li>
+                    <li><a class="textwhite" href="komplainstaff.html">Komplain</a></li>
                     <li class="active"><a class="textwhite" href="tambahcatatan.html">Catatan</a></li>
                     <li><a class="textwhite" href="#">Data Karyawan</a></li>
                     <li><a class="textwhite" href="#">Data Pelanggan</a></li>
