--- a/I3PFrontEnd/listpelanggan.html
+++ b/I3PFrontEnd/listpelanggan.html
@@ -24,7 +24,7 @@
             </div>
         </nav> 
         <div class="container">
-            <div class="headcenter">Daftar Karyawan</div>
+            <div class="headcenter">Daftar Pelanggan</div>
             <div class="panel panel-default panel-reg">
                 <div class="panel-body">
                     <table class="table table-condensed">
